<resources>
    <string name="app_name">GithubUser</string>
    <string name="search">Search</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="username">Username</string>
    <string name="id">ID</string>
    <string name="company">Company</string>
    <string name="search_status">Please Search User</string>
    <string name="search_hint">Insert Username</string>
    <string name="no_user_found">No User Found</string>
    <string name="name">Name</string>
    <string name="repo">Repo</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>

    <string name="tab_1">Followers</string>
    <string name="tab_2">Followings</string>
    <string name="title_activity_main_navigation_drawer">MainNavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GithubUserApplication</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="key_reminder">key_reminder</string>
    <string name="title_reminder">Reminder at 09.00 AM</string>
    <string name="switch_off">Reminder not set</string>
    <string name="switch_on">Reminder is set</string>

</resources>