<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_user_detail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@color/brown_toolbar"
            android:layout_gravity="start"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"/>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TableRow
                android:layout_marginBottom="8dp">
                <TextView
                    android:text="@string/repo"
                    android:layout_marginEnd="12dp"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <TextView
                    android:text="@string/followers"
                    android:layout_marginEnd="12dp"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <TextView
                    android:text="@string/followings"
                    android:layout_marginEnd="12dp"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/tv_repo"
                    android:layout_marginEnd="12dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_follower"
                    android:layout_marginEnd="12dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_following"
                    android:layout_marginEnd="12dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/tv_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/company"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="start"
        android:layout_marginBottom="16dp"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/detail_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/brown_toolbar"
        android:layout_marginTop="16dp"
        app:tabTextColor="@color/white"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/detail_view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_favorite_border_24"
            app:layout_anchor="@id/detail_view_pager"
            app:layout_anchorGravity="bottom|end"
            android:layout_margin="16dp"
            android:backgroundTint="@color/brown_toolbar"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>